--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "ldapjs": "^2.3.1",
     "mongoose": "^6.0.7",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.5.0",
